Changed padding to margin to avoid visible text after ellipses.

--- a/app/assets/stylesheets/scholar.scss
+++ b/app/assets/stylesheets/scholar.scss
@@ -205,7 +205,7 @@ div[class*="_admin_set_id"] {
 }
 
 .dl-horizontal dd {                                                                                                                                                         
-  padding-bottom: 6px;
+  margin-bottom: 12px;
 }
 
 .people {
